--- a/Css/main.css
+++ b/Css/main.css
@@ -1,58 +1,113 @@
-* {
- box-sizing: border-box;
- font-family: -apple-system, BlinkMacSystemFont, "segoe ui", roboto, oxygen, ubuntu, cantarell, "fira sans", "droid sans", "helvetica neue", Arial, sans-serif;
- font-size: 16px;
+@import "tweet_box.css";
+
+:root
+{
+    --twitter-color: black;
+    --twitter-background: #e6ecf0;
 }
-body {
- background-color: #15c4d5;
+body{
+    font-family:Arial, Helvetica, sans-serif;
 }
-.login {
- width: 400px;
- background-color: #ffffff;
- box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.3);
- margin: 100px auto;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
 }
-.login h1 {
- text-align: center;
- color: #5b6574;
- font-size: 24px;
- padding: 20px 0 20px 0;
- border-bottom: 1px solid #dee0e4;
+textarea{
+    resize: none;
+    outline: none;
+    width: 100%;
+    border: 1px solid black;
+    border-bottom: 1px solid var(--twitter-background);
+    font-size: 18px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-.login form {
- display: flex;
- flex-wrap: wrap;
- justify-content: center;
- padding-top: 20px;
+
+
+.fa-twitter{
+    color: var(--twitter-color);
+    font-size: 30px!important;
 }
-.login form label {
- display: flex;
- justify-content: center;
- align-items: center;
- width: 50px;
- height: 50px;
- background-color: #15c4d5;
- color: #ffffff;
+.main{
+    border-right: 1px solid var(--twitter-background);
 }
-.login form input[type="password"], .login form input[type="text"] {
- width: 310px;
- height: 50px;
- border: 1px solid #dee0e4;
- margin-bottom: 20px;
- padding: 0 15px;
+.grid-container{
+/* width: 100px; */
+max-width: 1350px;
+margin: 0 auto;
+display: grid;
+grid-template-columns: 1fr 2fr;
+grid-template-rows: 0.8fr 1.5fr 1fr;
+gap: 0px 0px;
+grid-template-areas: 
+"sidebar main right_sidebar ."
+"sidebar main right_sidebar ."
+"sidebar main right_sidebar .";
 }
-.login form input[type="submit"] {
- width: 100%;
- padding: 15px;
- margin-top: 20px;
- background-color: #15c4d5;
- border: 0;
- cursor: pointer;
- font-weight: bold;
- color: #ffffff;
- transition: background-color 0.2s;
+.sidebar{ grid-area:sidebar;}
+.main{ grid-area:main;}
+.right_sidebar{ grid-area:right_sidebar;}
+
+.active{
+    filter:blur(2px);
 }
-.login form input[type="submit"]:hover {
- background-color: #15c4d5;
- transition: background-color 0.2s;
+.page_titel{
+    font-weight: 900;
+    font-size: 20px;
+    padding: 15px 20px;
+    border-bottom: 1px solid var(--twitter-background);
+    background: #fff;
+    position:sticky;
+    top: 0;
+    z-index: 999;
 }
+.dropbtn{
+    color: #c6cacc;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    background: transparent;
+}
+.dropdown{
+    position: relative;
+    display: inline-block;
+}
+.dropdown i, .dropdown-content span{
+    color: rgb(242, 114, 114)
+}
+.dropdown-content{
+    display: none;
+    position: absolute;
+    background-color: #fff;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+.dropdown-content a{
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+.dropdown-content a:hover{
+    background-color: #e6e6e6;
+}
+.dropdown:hover .dropdown-content{
+    display: block;
+}
+
+.tweet_left img {
+    width: 50px;
+    border-radius: 50px;
+    border: 1px solid var(--twitter-background);
+    margin: 0;
+}
+
+
+
+#image-preview {
+    width: 20px; 
+    height: 20px; 
+    margin-top: 10px;
+  }
