--- a/Css/main.css
+++ b/Css/main.css
@@ -5,7 +5,9 @@ box-sizing: border-box;
  font-family: -apple-system, BlinkMacSystemFont, "segoe ui", roboto, oxygen, ubuntu, cantarell, "fira sans", "droid sans", "helvetica neue", Arial, sans-serif;
  font-size: 16px;
 }
-
+html {
+    scroll-behavior: smooth;
+  }
 body {
  background-color: white;
  position: relative;
