--- a/Css/tweet_box.css
+++ b/Css/tweet_box.css
@@ -7,6 +7,9 @@
   display: flex;
   justify-content: flex-end;
 }
+/* html {
+  overflow: scroll;
+} */
 .tweet_box {
 
   padding: 20px 15px 20px 0;
@@ -86,6 +89,7 @@ select:focus{
   border-radius: 15px;
   cursor: pointer;
 }
+
 .tweet_icons{
   width: 100%;
   max-width: 400px;
@@ -143,7 +147,7 @@ select:focus{
   box-shadow:2px 2px 5px rgba(0,0,0,0.15);
 
 }
-#img-input{
+.img-input{
   opacity: 0;
    position: absolute;
    /* cursor: pointer; */
