--- a/Css/style.css
+++ b/Css/style.css
@@ -59,6 +59,9 @@ grid-template-areas:
 .activeUpdate{
     filter:blur(2px);
 }
+/* .active{
+    filter: blur(0);
+} */
 .page_titel{
     font-weight: 900;
     font-size: 20px;
