--- a/Css/main.css
+++ b/Css/main.css
@@ -301,3 +301,22 @@ body {
     left: 88%;
     background-color: none;
 }
+
+.profile #log_in{
+    position: absolute;
+    left: 50%;
+    bottom: 5px;
+    transform: translateX(-50%);
+    min-width: 50px;
+    line-height: 50px;
+    font-size: 20px;
+    border-radius: 12px;
+    text-align: center;
+    transition: all 0.4s ease;
+    background-color: #1d1b31;
+}
+
+.sidebar.active .profile #log_in{
+    left: 88%;
+    background-color: none;
+}
