Styling and forgot password done

--- a/upload.css
+++ b/upload.css
@@ -16,7 +16,7 @@
 }
 
 /* Form Inputs */
-.upload-profile-picture-form .form-group {
+.upload-profile-picture-form .form-css {
     margin-bottom: 15px;
 }
 
