--- a/Css/main.css
+++ b/Css/main.css
@@ -16,14 +16,14 @@ body {
  overflow: hidden;
 }
 
-.login {
+.gtr {
  width: 400px;
  background-color: #ffffff;
  box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.3);
  margin: 100px auto;
 }
 
-.login h1 {
+.gtr h1 {
  text-align: center;
  color: #5b6574;
  font-size: 24px;
@@ -31,14 +31,14 @@ body {
  border-bottom: 1px solid #dee0e4;
 }
 
-.login form {
+.gtr form {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  padding-top: 20px;
 }
 
-.login form label {
+.gtr form label {
  display: flex;
  justify-content: center;
  align-items: center;
@@ -48,7 +48,7 @@ body {
  color: #ffffff;
 }
 
-.login form input[type="password"], .login form input[type="text"] {
+.gtr form input[type="password"], .gtr form input[type="text"] {
  width: 310px;
  height: 50px;
  border: 1px solid #dee0e4;
@@ -56,7 +56,7 @@ body {
  padding: 0 15px;
 }
 
-.login form input[type="submit"] {
+.gtr form input[type="submit"] {
  width: 100%;
  padding: 15px;
  margin-top: 20px;
@@ -68,7 +68,7 @@ body {
  transition: background-color 0.2s;
 }
 
-.login form input[type="submit"]:hover {
+.gtr form input[type="submit"]:hover {
  background-color: #15c4d5;
  transition: background-color 0.2s;
 }
